[tool.poetry]
name = "elec_consumption"
version = "0.1.0"
description = "cluster analysis and statistical learning for electricity consumption profiles"
authors = ["edxu96 <edxu96@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
seaborn = "^0.11.0"
tslearn = "^0.4.1"
sklearn = "^0.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
ipykernel = "^5.4.1"
jupyter = "^1.0.0"
nbdev = "^1.1.5"
setuptools = "^51.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
